tests/snapshots/file@variable@collide_with_parameter.lox.snap
---
source: tests/common/mod.rs
description: "fun foo(a) {\n  var a; // Error at 'a': Already a variable with this name in this scope.\n}\n"
input_file: crafting_interpreters_test_files/variable/collide_with_parameter.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found 'fun'
   ╭─[1:1]
 1 │ fun foo(a) {
   · ─┬─
   ·  ╰── here
 2 │   var a; // Error at 'a': Already a variable with this name in this scope.
   ╰────
Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found '}'
   ╭─[3:1]
 2 │   var a; // Error at 'a': Already a variable with this name in this scope.
 3 │ }
   · ┬
   · ╰── here
   ╰────
